# metad

./: .gitignore  CMakeLists.txt  README.md  deltametaworker.cpp  fullmetaworker.cpp  main.cpp  mainfunc.cpp  mainfunc.h  meta.cpp  meta.h  metad.cbp  readme.txt  threaddatacontainer.h  tstring.h  xmlfunc.cpp  xmlfunc.h
exeptions/: unaccaptable.h
net/: netfunc.cpp  netfunc.h  tagstrrings.h
workers/: deltametaworker.cpp  fullmetaworker.cpp
